src/test/ui/generic-associated-types/bugs/issue-88526.stderr
error[E0207]: the type parameter `I` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-88526.rs:27:13
   |
LL | impl<'q, Q, I, F> A for TestB<Q, F>
   |             ^ unconstrained type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
